Next: Final Update

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axion": "^0.1.0",
+    "axios": "^1.8.4",
     "frontend": "file:",
+    "mongodb": "^6.15.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
